css corrections, alignment fixed in home, place-detail

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -69,3 +69,8 @@
   width: 100%;
   object-fit: none;
 }
+
+.result-item-img-wrapper{
+  max-width: 11rem;
+  width: 11rem;
+}
